# api-whatsappweb

./: .dockerignore  .env  .gitignore  Makefile  README.md  coda_comigo.md  compose.yml  dockerfile  mkdocs.yml  pyproject.toml  requirements.txt  spec.md
calls/: flash_models.py  helpers.py  main.py
code/: chrome_driver_instance.py  control_loop_foba.py  helpers.py  main.py  models.py  selenium_helpers.py  views.py  whatsweb_interactions.py
db/: compose.yml  connection.py  db_init.py
docs/: Whatsweb_Interactions.md  index.md
prints/: readme.md
profiles/: readme.md
tests/: conftest.py  test_request_routes.py  test_whatsapp_methods.py  test_whatsapp_methods_with_session.py  test_whatsapp_methods_without_session.py
valid_profile_test/: DevToolsActivePort
valid_profile_test/Default/: Preferences
valid_profile_test/Default/Cache/Cache_Data/: data_0  data_1  data_2  f_000001  f_000004  f_000005  f_000006  f_000008  f_000009  f_00000d  index
valid_profile_test/Default/Code Cache/js/: 00013082ae35d736_0  16e7235f08e2eff0_0  2e63bf1caf44fca7_0  3aef2731dea8dff0_0  4514b181fa1b432c_0  4c164e4093c631d5_0  657c848d8226c03b_0  73b7671c8ff7b3c1_0  74a175cc9f2a0ee5_0  8dac4f522efdc0b9_0  96889fd427fd328f_0  9d8e0bd828f90448_0  b5426206fb2f110a_0  d068b5abb0614c81_0  f5e19649612aa3da_0  fa011dc5e2d57985_0  (+1 more)
valid_profile_test/Default/DawnCache/: index
valid_profile_test/Default/GPUCache/: index
valid_profile_test/Default/Network/: Cookies
valid_profile_test/Default/Session Storage/: LOG  LOG.old
valid_profile_test/Default/shared_proto_db/: LOG  LOG.old
(+7 files in other folders)
